Invalidate the graphics layer subtree on stacking change of descendant PaintLayer.

This is because change of stacking may result in a change of the size
or position of a composited layer.

Bug: 916896

Change-Id: I44d42efc84df892c9e6cbf04f9dcb9ee34a803d9
Reviewed-on: https://chromium-review.googlesource.com/c/1392363
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619544}