third_party/blink/renderer/core/paint/paint_layer_stacking_node.cc
@@ -51,6 +51,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/public/platform/platform.h"
 #include "third_party/blink/renderer/core/layout/layout_multi_column_flow_thread.h"
 #include "third_party/blink/renderer/core/layout/layout_view.h"
+#include "third_party/blink/renderer/core/paint/compositing/composited_layer_mapping.h"
 #include "third_party/blink/renderer/core/paint/compositing/paint_layer_compositor.h"
 #include "third_party/blink/renderer/core/paint/paint_layer.h"
 
@@ -130,8 +131,19 @@ void PaintLayerStackingNode::DirtyZOrderLists() {
 void PaintLayerStackingNode::DirtyStackingContextZOrderLists(
     PaintLayer* layer) {
   if (PaintLayerStackingNode* stacking_node =
-          AncestorStackingContextNode(layer))
+          AncestorStackingContextNode(layer)) {
+    // This invalidation code intentionally refers to stale state.
+    DisableCompositingQueryAsserts disabler;
+
+    // Changes of stacking may result in graphics layers changing size
+    // due to new contents painting into them.
+    PaintLayer* ancestor_layer = stacking_node->Layer();
+    if (auto* mapping = ancestor_layer->GetCompositedLayerMapping()) {
+      mapping->SetNeedsGraphicsLayerUpdate(kGraphicsLayerUpdateSubtree);
+    }
+
     stacking_node->DirtyZOrderLists();
+  }
 }
 
 void PaintLayerStackingNode::RebuildZOrderLists() {
